static/css/idea_cloud.css
/* colour palette https://coolors.co/12202b-647d76-f9f4f5-788192-767179 */


/* -- fonts -- */

@font-face {
    font-family: 'Amoera';
    src: url('../fonts/amoera-Regular.ttf') format('truetype');
}

@font-face {
    font-family: 'Nexa';
    src: url('../fonts/nexa/Nexa-ExtraLight.ttf') format('truetype');
}

@font-face {
    font-family: 'Merriweather';
    src: url('../fonts/merriweather/Merriweather-Light.otf') format('opentype');
}


/* -- links -- */

a {
    color: #F9F4F5;
    text-decoration: none;
}

a:visited, a:hover {
    color: #F9F4F5;
    text-decoration: none;
}


/*  -- header -- */

.header {
    background-color: #647D76;
    color: black;
    padding-top: 2%;
    text-align: center;
    padding-bottom: 1%;
}

h1 {
    color: #F9F4F5;
    font-size: 3rem;
    margin-bottom: 1rem;
    font-family: 'Nexa', serif;
    font-weight: bold;
}

h2 {
    font-size: 1.9rem;
    font-family: 'Amoera', serif;
    color: #F9F4F5;
}

.nav-bar {
    align-items: center;
    background-color: #767179;
    color: black;
    display: flex;
    font-size: 1rem;
    font-family: 'Merriweather', serif;
    justify-content: center;
    width: auto;
    border-radius: 0 0 0.625rem 0.625rem;
}

.nav-tag {
    padding-top: 1rem;
    padding-left: 2rem;
    padding-right: 2rem;
    padding-bottom: 1rem;
}


/*  -- body -- */

body {
    background-color: #12202B;
    color: #F9F4F5;
    font-family: 'Merriweather', serif;
}

.page-description {
    text-align: center;
}

.page-title {
    margin-bottom: 3rem;
}

main {
    margin: 5rem 10rem;
}

footer {
    align-items: center;
    color: #F9F4F5;
    display: flex;
    font-size: 1rem;
    font-family: 'Merriweather', serif;
    justify-content: center;
    width: auto;
    margin-top: 10rem;
}

.footer-tag {
    padding: 1rem;
}


/*  -- forms -- */

form {
    margin: 0 43%;
}

label {
    margin-bottom: 0.3rem;
    margin-top: 0.8rem;
}

.disclaimer {
    margin-top: 0.5rem;
}

.register-buttons {
    display: flex;
    gap: 2rem;
    justify-content: center;
}

.form-button {
    margin-top: 1rem;
}


/* -- about us -- */

.about-us {
    text-align: left;
}

#meet-our-team {
    margin-top: 5rem;
    margin-bottom: 3rem;
}

/* -- team boxes -- */

#team-description {
    text-align: center;
    margin-bottom: 2rem;
}

.team-box {
    display: flex;
    align-items: center;
    gap: 1.5rem;
    margin-bottom: 4rem;
    max-width: 30rem;
    margin: 0 auto 2rem auto;
}

.team-box img {
    width: 7rem;
    height: 7rem;
    object-fit: cover;
}

.name-and-description {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.name-and-description h4 {
    font-size: 1.25rem;
}

.name-and-description h5 {
    font-size: 1rem;
    opacity: 0.7;
}

